<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizappfinal.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_title"
                android:textColor="@color/bodyTextColor"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                style="@style/TitleBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_body" />

            <TextView
                style="@style/QuestionTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question_name" />

            <TextView
                style="@style/QuestionBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_body_name" />

            <EditText
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/answer_name"
                android:inputType="textCapWords" />

            <View style="@style/DivisionLine" />

            <TextView
                style="@style/QuestionTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <TextView
                style="@style/QuestionBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_body_1" />

            <RadioGroup
                android:id="@+id/answer_to_question_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_1a"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_1a" />

                <RadioButton
                    android:id="@+id/answer_1b"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_1b" />

                <RadioButton
                    android:id="@+id/answer_1c"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_1c" />

                <RadioButton
                    android:id="@+id/answer_1d"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_1d" />
            </RadioGroup>

            <View style="@style/DivisionLine" />

            <TextView
                style="@style/QuestionTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <TextView
                style="@style/QuestionBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_body_2" />

            <RadioGroup
                android:id="@+id/answer_to_question_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_2a"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_2a" />

                <RadioButton
                    android:id="@+id/answer_2b"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_2b" />

                <RadioButton
                    android:id="@+id/answer_2c"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_2c" />

                <RadioButton
                    android:id="@+id/answer_2d"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_2d" />
            </RadioGroup>

            <View style="@style/DivisionLine" />

            <TextView
                style="@style/QuestionTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <TextView
                style="@style/QuestionBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_body_3" />

            <RadioGroup
                android:id="@+id/answer_to_question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_3a"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_3a" />

                <RadioButton
                    android:id="@+id/answer_3b"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_3b" />

                <RadioButton
                    android:id="@+id/answer_3c"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_3c" />
            </RadioGroup>

            <View style="@style/DivisionLine" />

            <TextView
                style="@style/QuestionTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <TextView
                style="@style/QuestionBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_body_4" />

            <RadioGroup
                android:id="@+id/answer_to_question_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_4a"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_4a" />

                <RadioButton
                    android:id="@+id/answer_4b"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_4b" />

                <RadioButton
                    android:id="@+id/answer_4c"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_4c" />
            </RadioGroup>

            <View style="@style/DivisionLine" />

            <TextView
                style="@style/QuestionTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <TextView
                style="@style/QuestionBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_body_5" />

            <RadioGroup
                android:id="@+id/answer_to_question_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_5a"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_5a" />

                <RadioButton
                    android:id="@+id/answer_5b"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_5b" />

                <RadioButton
                    android:id="@+id/answer_5c"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_5c" />
            </RadioGroup>

            <View style="@style/DivisionLine" />

            <TextView
                style="@style/QuestionTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6" />

            <TextView
                style="@style/QuestionBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_body_6" />

            <RadioGroup
                android:id="@+id/answer_to_question_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_6a"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_6a" />

                <RadioButton
                    android:id="@+id/answer_6b"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_6b" />

                <RadioButton
                    android:id="@+id/answer_6c"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_6c" />
            </RadioGroup>

            <View style="@style/DivisionLine" />

            <TextView
                style="@style/QuestionTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_7" />

            <TextView
                style="@style/QuestionBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_body_7" />

            <RadioGroup
                android:id="@+id/answer_to_question_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_7a"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_7a" />

                <RadioButton
                    android:id="@+id/answer_7b"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_7b" />

                <RadioButton
                    android:id="@+id/answer_7c"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_7c" />
            </RadioGroup>

            <View style="@style/DivisionLine" />

            <TextView
                style="@style/QuestionTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_8" />

            <TextView
                style="@style/QuestionBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_body_8" />

            <RadioGroup
                android:id="@+id/answer_to_question_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_8a"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_8a" />

                <RadioButton
                    android:id="@+id/answer_8b"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_8b" />

                <RadioButton
                    android:id="@+id/answer_8c"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_8c" />
            </RadioGroup>

            <View style="@style/DivisionLine" />

            <TextView
                style="@style/QuestionTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_9" />

            <TextView
                style="@style/QuestionBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_body_9" />

            <RadioGroup
                android:id="@+id/answer_to_question_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_9a"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_9a" />

                <RadioButton
                    android:id="@+id/answer_9b"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_9b" />

                <RadioButton
                    android:id="@+id/answer_9c"
                    style="@style/RadioAnswer"
                    android:text="@string/answer_9c" />
            </RadioGroup>

            <View style="@style/DivisionLine" />

            <TextView
                style="@style/QuestionTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_10" />

            <TextView
                style="@style/QuestionBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_body_10" />

            <CheckBox
                android:id="@+id/answer_10a"
                style="@style/RadioAnswer"
                android:text="@string/answer_10a" />

            <CheckBox
                android:id="@+id/answer_10b"
                style="@style/RadioAnswer"
                android:text="@string/answer_10b" />

            <CheckBox
                android:id="@+id/answer_10c"
                style="@style/RadioAnswer"
                android:text="@string/answer_10c" />

            <CheckBox
                android:id="@+id/answer_10d"
                style="@style/RadioAnswer"
                android:text="@string/answer_10d" />

            <View style="@style/DivisionLine" />

            <TextView
                style="@style/QuestionBodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/submit_text" />

        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/activity_main"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_shape"
            android:onClick="submitAnswers"
            android:text="@string/submit"
            android:textColor="#ffffff" />
    </RelativeLayout>

</ScrollView>